# ttrpg_scribe

./: .flake8  .gitignore  LICENSE  assemble.py  assemble.sh  make_portable.sh  package-lock.json  package.json  pdm_build.py  pyproject.toml  rollup.base.mjs  tsconfig.base.json  tsconfig.json
all_in_one/: README.md  pyproject.toml
all_in_one/dnd_scribe/all_in_one/: __init__.py  dispatcher.py
all_in_one/dnd_scribe/all_in_one/templates/: test.j2.html
all_in_one/ttrpg_scribe/all_in_one/: __init__.py
all_in_one/ttrpg_scribe/all_in_one/project_templates/dnd_5e/: config.py
all_in_one/ttrpg_scribe/all_in_one/project_templates/pf2e/: config.py
bestiary/: README.md  pyproject.toml
bestiary/dnd_scribe/bestiary/: apis.py
bestiary/dnd_scribe/bestiary/creature/: __init__.py  ability.py  armour.py  attack.py  movement.py  sense.py  templates.py  trait.py
bestiary/dnd_scribe/bestiary/flask/: __init__.py
bestiary/dnd_scribe/bestiary/flask/templates/: creature.j2.html
core/: README.md  pyproject.toml
core/dnd_scribe/core/: dice.py  markdown.py  script_loader.py  signals.py
core/dnd_scribe/core/flask/: __init__.py
core/dnd_scribe/core/flask/static/: article.css  collapsible.css
core/ttrpg_scribe/core/: dice.py  json_path.py  markdown.py  plugin.py  script_loader.py  signals.py  typescript.py
core/ttrpg_scribe/core/flask/: __init__.py
core/ttrpg_scribe/core/flask/static/: article.css  base.css  collapsible.css  popup.js  popup.ts
core/ttrpg_scribe/core/flask/templates/: dependencies.j2.html
dnd_bestiary/: README.md  pyproject.toml
dnd_bestiary/ttrpg_scribe/dnd_bestiary/: apis.py
dnd_bestiary/ttrpg_scribe/dnd_bestiary/creature/: armour.py  attack.py  movement.py  templates.py
dnd_bestiary/ttrpg_scribe/dnd_bestiary/flask/: __init__.py
dnd_bestiary/ttrpg_scribe/dnd_bestiary/flask/static/: stat_block.css
dnd_bestiary/ttrpg_scribe/dnd_bestiary/flask/templates/: creature.j2.html  stat_block_mux.j2.html
encounter/: README.md  pyproject.toml
encounter/dnd_scribe/encounter/flask/: __init__.py
encounter/dnd_scribe/encounter/flask/extension/: __init__.py
encounter/dnd_scribe/encounter/flask/static/: combat.css  combat.js  encounter_engine.css  encounter_engine.js
encounter/dnd_scribe/encounter/flask/templates/: combat.j2.html  encounter_engine.j2.html
encounter/ttrpg_scribe/encounter/flask/: __init__.py
encounter/ttrpg_scribe/encounter/flask/extension/: __init__.py
encounter/ttrpg_scribe/encounter/flask/plugin/: __init__.py
encounter/ttrpg_scribe/encounter/flask/static/: configure_party.ts  encounter_engine.css  encounter_engine.js  encounter_engine.ts
encounter/ttrpg_scribe/encounter/flask/templates/: configure_party.j2.html  encounter_engine.j2.html
notes/: README.md  pyproject.toml
notes/dnd_scribe/notes/: __init__.py  content_tree.py  data_cache.py  data_script.py  paths.py
notes/dnd_scribe/notes/templates/: index.j2.html
notes/dnd_scribe/notes/templates/layout/: article.j2.html  base.j2.html  session.j2.html
notes/test/: config.py
notes/test/dnd_5e/: config.py
notes/test/dnd_5e/pages/foo/: foo.j2.md  foo.py
notes/test/pages/: foo.j2.md  foo.py
notes/test/pages/foo/: foo.j2.md  foo.py
notes/test/pf2e/: config.py
notes/test/pf2e/npcs/: Silifrey Buckman.json
notes/test/pf2e/pages/foo/: foo.j2.md  foo.py
notes/ttrpg_scribe/notes/: __init__.py  content_tree.py  data_cache.py  data_script.py  paths.py  run_script_shim.py
notes/ttrpg_scribe/notes/templates/: index.j2.html  script_list.j2.html
notes/ttrpg_scribe/notes/templates/layout/: article.j2.html  session.j2.html
npc/: README.md  pyproject.toml
npc/dnd_scribe/npc/: __init__.py  character.py  culture.py  entity.py  namelists.py  namelists.yaml  template.py
npc/dnd_scribe/npc/flask_app/: __init__.py
npc/dnd_scribe/npc/flask_app/extension/: __init__.py
npc/dnd_scribe/npc/flask_app/static/: npc_generator.css
npc/dnd_scribe/npc/race/: __init__.py  fizban.py  pf2e.py  phb.py
npc/ttrpg_scribe/npc/: character.py  entity.py  namelists.py  namelists.yaml
npc/ttrpg_scribe/npc/flask_app/: __init__.py
npc/ttrpg_scribe/npc/race/: __init__.py  fizban.py  phb.py
pf2e_bestiary/: README.md  pyproject.toml
pf2e_bestiary/dnd_scribe/pf2e_bestiary/: actions.py  hazard.py
pf2e_bestiary/dnd_scribe/pf2e_bestiary/creature/: __init__.py
pf2e_bestiary/dnd_scribe/pf2e_bestiary/flask/: __init__.py
pf2e_bestiary/dnd_scribe/pf2e_bestiary/foundry/: __init__.py  enrich.py  i18n.py  packs.py
pf2e_compendium/: pyproject.toml
pf2e_compendium/test/: conftest.py  test_enrich.py  test_packs.py
pf2e_compendium/ttrpg_scribe/pf2e_compendium/: actions.py  actor.py  hazard.py  templates.py
pf2e_compendium/ttrpg_scribe/pf2e_compendium/creature/: __init__.py  analyser.py  builder.py  statistics.py  templates.py
pf2e_compendium/ttrpg_scribe/pf2e_compendium/flask/: __init__.py
pf2e_compendium/ttrpg_scribe/pf2e_compendium/foundry/: __init__.py  __main__.py  enrich.py  i18n.py  mongo.py  mongo_client.py  mongo_server.py  packs.py  roll_data.py
pf2e_compendium/ttrpg_scribe/pf2e_compendium/oracle/: __init__.py
pf2e_compendium/ttrpg_scribe/pf2e_compendium/test/: test_enrich.py
subprojects/core/: README.md  pyproject.toml  rollup.config.mjs  tsconfig.json
subprojects/core/ttrpg_scribe/core/: dice.py  html.py  json_path.py  markdown.py  typescript.py
subprojects/dnd_bestiary/: pyproject.toml  tsconfig.json
subprojects/notes/: README.md  pyproject.toml  rollup.config.mjs  tsconfig.json
subprojects/notes/ttrpg_scribe/notes/: __init__.py  content_tree.py  data_script.py  paths.py
subprojects/npc/: README.md  pyproject.toml  rollup.config.mjs  tsconfig.json
subprojects/npc/ttrpg_scribe/npc/: features.yaml  namelists.yaml
subprojects/pf2e_compendium/: README.md  pyproject.toml  rollup.config.mjs  tsconfig.json
subprojects/pf2e_compendium/test/: conftest.py  test_enrich.py  test_packs.py
subprojects/pf2e_compendium/ttrpg_scribe/pf2e_compendium/: actions.py  hazard.py  spell.py  templates.py
ttrpg-scribe-buildscript/: pyproject.toml  ttrpg_scribe_buildscript.py
(+154 files in other folders)
