[project]
name = "ttrpg_scribe"
description = "Personal adhoc tool for building my TTRPG GM notes"
authors = [
    {name = "Daomephsta", email = "dtnilfisk@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argcomplete>=3.1.2,<4",
    "waitress>=3,<4",
    "ttrpg-scribe-core @ file:///${PROJECT_ROOT}/core",
    "ttrpg-scribe-dnd-bestiary @ file:///${PROJECT_ROOT}/dnd_bestiary",
    "ttrpg-scribe-encounter @ file:///${PROJECT_ROOT}/encounter",
    "ttrpg-scribe-notes @ file:///${PROJECT_ROOT}/notes",
    "ttrpg-scribe-npc @ file:///${PROJECT_ROOT}/npc",
    "ttrpg-scribe-pf2e-compendium @ file:///${PROJECT_ROOT}/pf2e_compendium"
]
# Version is set by in-tree ttrpg-scribe-buildscript plugin
dynamic = ["version"]
license = {text = "MIT"}

[project.optional-dependencies]
runtime = [
    "matplotlib>=3.7.2,<4",
    "pandas>=2.0.3,<3",
    "tabulate>=0.9.0,<1",
]

[project.scripts]
ttrpg_scribe = "ttrpg_scribe.all_in_one:main"

[build-system]
requires = ["pdm-backend", "file:///${PROJECT_ROOT}/ttrpg-scribe-buildscript"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
plugins = [
    "file:///${PROJECT_ROOT}/ttrpg-scribe-buildscript"
]

[tool.pdm.build]
includes = ["ttrpg_scribe/all_in_one", "core/ttrpg_scribe/core", "dnd_bestiary/ttrpg_scribe/dnd_bestiary", "pf2e_compendium/ttrpg_scribe/pf2e_compendium", "notes/ttrpg_scribe/notes", "encounter/ttrpg_scribe/encounter", "npc/ttrpg_scribe/npc"]
excludes = ["**/*.ts"]

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/core#egg=ttrpg-scribe-core",
    "-e file:///${PROJECT_ROOT}/dnd_bestiary#egg=ttrpg-scribe-dnd-bestiary",
    "-e file:///${PROJECT_ROOT}/encounter#egg=ttrpg-scribe-encounter",
    "-e file:///${PROJECT_ROOT}/notes#egg=ttrpg-scribe-notes",
    "-e file:///${PROJECT_ROOT}/npc#egg=ttrpg-scribe-npc",
    "-e file:///${PROJECT_ROOT}/pf2e_compendium#egg=ttrpg-scribe-pf2e-compendium"
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.4.1"
]
