[tool.poetry]
name = "dnd_scribe_all_in_one"
version = "0.1.0"
description = ""
authors = ["Daomephsta <dtnilfisk@gmail.com>"]
readme = "README.md"
packages = [{include = "dnd_scribe/all_in_one"}]

[tool.poetry.dependencies]
python = "^3.11"
dnd_scribe_core = { path = "../core", develop = true }
dnd_scribe_bestiary = { path = "../bestiary", develop = true }
dnd_scribe_notes = { path = "../notes", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
