[tool.poetry]
name = "dnd_scribe_all_in_one"
version = "0.1.0"
description = ""
authors = ["Daomephsta <dtnilfisk@gmail.com>"]
readme = "README.md"
packages = [{include = "dnd_scribe/all_in_one"}]

[tool.poetry.dependencies]
python = "^3.11"
dnd_scribe_core = { path = "../core", develop = true }
dnd_scribe_bestiary = { path = "../bestiary", develop = true }
dnd_scribe_notes = { path = "../notes", develop = true }
dnd_scribe_encounter = { path = "../encounter", develop = true }
dnd_scribe_npc = { path = "../npc", develop = true }
waitress = "^2.1.2"
# Runtime only dependencies
matplotlib = {version = "^3.7.2", optional = true}
pandas = {version = "^2.0.3", optional = true}
tabulate = {version = "^0.9.0", optional = true}
argcomplete = "^3.1.2"

[tool.poetry.extras]
runtime = ["matplotlib", "pandas", "tabulate"]

[tool.poetry.scripts]
dnd_scribe = {callable = "dnd_scribe.all_in_one:main", extras = ["runtime"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"