[tool.poetry]
name = "ttrpg_scribe_all_in_one"
version = "0.1.0"
description = ""
authors = ["Daomephsta <dtnilfisk@gmail.com>"]
readme = "README.md"
packages = [{include = "ttrpg_scribe/all_in_one"}]

[tool.poetry.dependencies]
python = "^3.11"
ttrpg_scribe_core = { path = "../core", develop = true }
ttrpg_scribe_dnd_bestiary = { path = "../dnd_bestiary", develop = true }
ttrpg_scribe_pf2e_compendium = { path = "../pf2e_compendium", develop = true }
ttrpg_scribe_notes = { path = "../notes", develop = true }
ttrpg_scribe_encounter = { path = "../encounter", develop = true }
ttrpg_scribe_npc = { path = "../npc", develop = true }
waitress = "^3"
# Runtime only dependencies
matplotlib = {version = "^3.7.2", optional = true}
pandas = {version = "^2.0.3", optional = true}
tabulate = {version = "^0.9.0", optional = true}
argcomplete = "^3.1.2"

[tool.poetry.extras]
runtime = ["matplotlib", "pandas", "tabulate"]

[tool.poetry.scripts]
ttrpg_scribe = {callable = "ttrpg_scribe.all_in_one:main", extras = ["runtime"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"