[tool.poetry]
name = "dnd_scribe_bestiary"
version = "0.1.0"
description = ""
authors = ["Daomephsta <dtnilfisk@gmail.com>"]
readme = "README.md"
packages = [{include = "dnd_scribe/bestiary"}]

[tool.poetry.dependencies]
python = "^3.11"
pluralizer = "^1.2.0"
requests = "^2.31.0"
flask = "^2.3.2"
dnd_scribe_core = { path = "../core", develop = true }
requests-cache = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
