[tool.poetry]
name = "ttrpg_scribe_core"
version = "0.1.0"
description = ""
authors = ["Daomephsta <dtnilfisk@gmail.com>"]
readme = "README.md"
packages = [{include = "ttrpg_scribe/core"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
markdown = "^3.4.3"
python-frontmatter = "^1.0.0"
pluralizer = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
