[project]
authors = [
    {name = "Daomephsta", email = "dtnilfisk@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "flask<3.0.0,>=2.3.2",
    "markdown<4.0.0,>=3.4.3",
    "python-frontmatter<2.0.0,>=1.0.0",
    "pluralizer<2.0.0,>=1.2.0",
]
name = "ttrpg_scribe_core"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "ttrpg_scribe/core",
]