[project]
authors = [
    {name = "Daomephsta", email = "dtnilfisk@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "requests<3.0.0,>=2.31.0",
    "flask<3.0.0,>=2.3.2",
    "ttrpg-scribe-core",
    "ttrpg-scribe-encounter",
    "requests-cache<2.0.0,>=1.1.0",
]
name = "ttrpg_scribe_dnd_bestiary"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "ttrpg_scribe/dnd_bestiary",
]