
[project]
authors = [
    {name = "Daomephsta", email = "dtnilfisk@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "flask<3.0.0,>=2.3.2",
    "ttrpg-scribe-core",
]
name = "ttrpg_scribe_encounter"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "ttrpg_scribe/encounter",
]