
[project]
authors = [
    {name = "Daomephsta", email = "dtnilfisk@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "flask<3.0.0,>=2.3.2",
    "ttrpg-scribe-core",
]
name = "ttrpg_scribe_encounter"
description = ""
readme = "README.md"
# Version is set by in-tree ttrpg-scribe-buildscript plugin
dynamic = ["version"]

[build-system]
requires = ["pdm-backend", "ttrpg-scribe-buildscript @ file:///${PROJECT_ROOT}/../ttrpg-scribe-buildscript"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
plugins = [
    "file:///${PROJECT_ROOT}/../ttrpg-scribe-buildscript"
]

[tool.pdm.build]
includes = [
    "ttrpg_scribe/encounter",
]

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../core#egg=ttrpg-scribe-core",
]
