[tool.poetry]
name = "ttrpg_scribe_notes"
version = "0.1.0"
description = ""
authors = ["Daomephsta <dtnilfisk@gmail.com>"]
readme = "README.md"
packages = [{include = "ttrpg_scribe/notes"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
ttrpg_scribe_dnd_bestiary = { path = "../dnd_bestiary", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
