
[project]
authors = [
    {name = "Daomephsta", email = "dtnilfisk@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "flask<3.0.0,>=2.3.2",
    "ttrpg-scribe-dnd-bestiary",
    "dill<1.0.0,>=0.3.8",
]
name = "ttrpg_scribe_notes"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "ttrpg_scribe/notes",
]