[tool.poetry]
name = "ttrpg_scribe_pf2e_compendium"
version = "0.1.0"
description = ""
authors = ["Daomephsta <dtnilfisk@gmail.com>"]
readme = "README.md"
packages = [{include = "ttrpg_scribe/pf2e_compendium"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
ttrpg_scribe_core = { path = "../core", develop = true }
ttrpg_scribe_encounter = { path = "../encounter", develop = true }
platformdirs = "^4.1.0"
pymongo = {extras = ["srv"], version = "^4.11.3"}
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
