[project]
name = "ttrpg_scribe_pf2e_compendium"
version = "0.1.0"
description = ""
authors = [
    {name = "Daomephsta", email = "dtnilfisk@gmail.com"},
]
dependencies = [
    "flask<3.0.0,>=2.3.2",
    "ttrpg-scribe-core",
    "ttrpg-scribe-encounter",
    "platformdirs<5.0.0,>=4.1.0",
    "pymongo[srv]<5.0.0,>=4.11.3",
    "bs4<1.0.0,>=0.0.2",
]
requires-python = "<4.0,>=3.11"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.4.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["ttrpg_scribe/pf2e_compendium"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=test/test_packs.py"
]
consider_namespace_packages = true
