[project]
authors = [
    {name = "Daomephsta", email = "dtnilfisk@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "requests<3.0.0,>=2.31.0",
    "flask<3.0.0,>=2.3.2",
    "requests-cache<2.0.0,>=1.1.0",
]
name = "ttrpg_scribe_dnd_bestiary"
description = ""
readme = "README.md"
# Version is set by in-tree ttrpg-scribe-buildscript plugin
dynamic = ["version"]

[build-system]
requires = ["pdm-backend", "ttrpg-scribe-buildscript @ file:///${PROJECT_ROOT}/../../ttrpg-scribe-buildscript"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
plugins = [
    "file:///${PROJECT_ROOT}/../../ttrpg-scribe-buildscript"
]

[tool.pdm.build]
includes = [
    "ttrpg_scribe/dnd_bestiary",
]

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../core#egg=ttrpg-scribe-core",
    "-e file:///${PROJECT_ROOT}/../encounter#egg=ttrpg-scribe-encounter"
]